feat: transaction&users api&auth
