# cmd/api/api.go
@@ -19,6 +19,11 @@ type config struct {
 	version string
 	db      dbConfig
 	apiUrl  string
+	mail    mailConfig
+}
+
+type mailConfig struct {
+	exp time.Duration
 }
 
 type dbConfig struct {
@@ -84,6 +89,12 @@ func (app *application) mount() *chi.Mux {
 			r.Group(func(r chi.Router) {
 				// r.Use(app.userContextMiddleware)
 				r.Get("/feed", app.getUserFeedHandler)
+			})
+
+			// Public routes
+			r.Route("/authentication", func(r chi.Router) {
+				// r.Post("/login", app.loginHandler)
+				r.Post("/user", app.registerUserHandler)
 			})
 		})
 	})
