# docs/swagger.yaml
@@ -1,5 +1,23 @@
 basePath: /v1
 definitions:
+  main.RegisterUserPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 6
+        type: string
+      username:
+        maxLength: 32
+        minLength: 3
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
   main.UpdatePostPayload:
     properties:
       content:
@@ -103,6 +121,32 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Swagger Social API
 paths:
+  /authentication/user:
+    post:
+      consumes:
+      - application/json
+      description: 注册一个新用户
+      parameters:
+      - description: 用户信息
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 用户创建成功
+          schema:
+            $ref: '#/definitions/store.User'
+        "400":
+          description: 请求错误
+          schema: {}
+        "409":
+          description: 用户已存在
+          schema: {}
+      summary: 注册用户
   /posts:
     post:
       consumes:
